volumes of meta updated

--- a/P003162.opf/meta.yml
+++ b/P003162.opf/meta.yml
@@ -4,4 +4,9 @@ source_metadata:
   id: bdr:W20095
   title: དམྱལ་གླིང་མུན་པ་རང་གསལ།
   author: ''
-  volumes: {}
+  volumes:
+    8b39ff4f330e454e94e2f01a2e7260eb:
+      image_group_id: I1KG17305
+      title: ''
+      volume_number: 1
+      total_pages: 120
