--- a/P003162.opf/layers/v001/Pagination.yml
+++ b/P003162.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 47f2f43603b34108bd8942a99065b660
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   3b6edd6ca1cd4b81ae16208be27cefb7:
